Fix large button spacing
The problem was that cross-axis flex functions WON'T
override the given width/height definition. Taking those
off the big buttons fixed it. Thanks to Manu on the
discord for telling me

--- a/style.css
+++ b/style.css
@@ -82,14 +82,6 @@ button {
     width: 4rem;
 }
 
-.x2 {
-    width: 8rem;
-}
-
 .y1 {
     height: 4rem;
-}
-
-.y2 {
-    height: 8rem;
 }
